Fold spec ITs into repository ITs; make the runner a unit up to the DB boundary
Keep the conventional pyramid: the runner is the unit entry point (real
policy + spec factory, mocked repositories); the repository/spec ITs fold
into one real-DB query tier; a small StudentQuestionQueryPolicyTest guards
the serving-policy imposition the runner can't observe once its repo is
mocked. Trim the service tests to their own orchestration.